# PRI-project-3

./: CMakeLists.txt  Doxyfile  README.md
docs/html/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c_source.html  _r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md_source.html  animal_8c.html  animal_8c__incl.map  animal_8c__incl.md5  animal_8c_a27f4c15c2d3176ea1ccea0b652f53a21_cgraph.md5  animal_8c_a27f4c15c2d3176ea1ccea0b652f53a21_icgraph.map  animal_8c_a27f4c15c2d3176ea1ccea0b652f53a21_icgraph.md5  animal_8c_a5d57c899f6584a225dda3cacc771a1b7_icgraph.map  animal_8c_a5d57c899f6584a225dda3cacc771a1b7_icgraph.md5  animal_8c_ae0350c1cc5503e6fbc4b81ab642ad164_icgraph.map  animal_8c_ae0350c1cc5503e6fbc4b81ab642ad164_icgraph.md5  animal_8c_af6d6189ffd7e3fb411e0c2e7386b5103_icgraph.md5  animal_8c_source.html  animal_8h.html  animal_8h__dep__incl.map  animal_8h__dep__incl.md5  animal_8h_a27f4c15c2d3176ea1ccea0b652f53a21_cgraph.map  animal_8h_a27f4c15c2d3176ea1ccea0b652f53a21_cgraph.md5  animal_8h_a27f4c15c2d3176ea1ccea0b652f53a21_icgraph.md5  animal_8h_a56aa81831577f1bc41977c699e832363_cgraph.map  animal_8h_a56aa81831577f1bc41977c699e832363_cgraph.md5  animal_8h_a56aa81831577f1bc41977c699e832363_icgraph.map  animal_8h_a56aa81831577f1bc41977c699e832363_icgraph.md5  animal_8h_a5d57c899f6584a225dda3cacc771a1b7_icgraph.md5  animal_8h_af6d6189ffd7e3fb411e0c2e7386b5103_icgraph.map  animal_8h_af6d6189ffd7e3fb411e0c2e7386b5103_icgraph.md5  animal_8h_source.html  annotated.html  classes.html  (+146 more)
include/: main_window.h  remove_item_window.h
src/: main.c  main_window.c  remove_item_window.c
(+158 files in other folders)
